<resources>
    <string name="app_name">Mexmash</string>
    <string name="asosiy">Асосий</string>
    <string name="yangiliklar">Янгиликлар</string>
    <string name="sovrinlar">Совринлар</string>
    <string name="umumiy_ballar">Умумий баллар</string>
    <string name="mahsulotlar">Маҳсулотлар</string>
    <string name="kirish">Кириш</string>
    <string name="kod_kelmadi">Код келмади</string>
    <string name="raqamni_o_zgartirish">Рақамни ўзгартириш</string>
    <string name="enter_phone_number_touse_the_app">Иловадан фойдаланиш учун телефон рақамингизни киритинг!</string>
    <string name="ushbu_raqamdan_foydalanib">Давом эттириш учун агент кодини киритинг. Сиз ушбу рақамдан фойдаланган ҳолда рўйхатдан ўтяпсиз:</string>
    <string name="tasdiqlash_kodi_ushbu_raqamga_yuborildi">Тасдиқлаш коди ушбу рақамага юборилди:</string>
    <string name="yuborish">Юбориш</string>
    <string name="telefon_raqamni_toliq_kiriting">Телефон рақамини тўлиқ киритинг!</string>
    <string name="viloyatni_tanlang">Вилоят танланг</string>
    <string name="tuman_tanlang">Туман танланг</string>
    <string name="mahalla_tanlang">Маҳалла танланг</string>
    <string name="shartlarga_roziman">Шартларга розиман</string>
    <string name="ro_yxatdan_o_tish">Рўйхатдан ўтиш</string>
    <string name="qayta_urinish">Қайта уриниш</string>
    <string name="xatolik">Хатолик</string>
    <string name="ko_cha">Кўча</string>
    <string name="familiya">Фамилия</string>
    <string name="ism">Исм</string>
    <string name="tug_ilgan_sana">Туғилган сана</string>
    <string name="ism_kiritmadingiz">Исм киритинг</string>
    <string name="familiya_kiritmadingiz">Фамилия киритинг</string>
    <string name="tugulgan_kuningizni_tanlang">Туғилган кунингизни танланг</string>
    <string name="telefon_raqami">Телефон рақами</string>
    <string name="chiqish">Чиқиш</string>
    <string name="promokodlar_tarix">Промо кодлар тарихи</string>
    <string name="tarix">Тарих</string>
    <string name="bekor_qilish">Бекор қилиш</string>
    <string name="ok">ОК</string>
    <string name="sizda_quyidagi_sovrinni_yutish">Сизда қуйидаги совринни ютиб олиш имконияти мавжуд:</string>
    <string name="bal">бал</string>
    <string name="kg">кг</string>
    <string name="kodni_kiriting">Кодни киритинг</string>
    <string name="kodni_yuborish">Кодни юбориш</string>
    <string name="kabinet">Кабинет</string>
    <string name="sizda_mavjud">Сизда мавжуд:</string>
    <string name="promo_kodni_kiriting">Промо кодни киритинг!</string>
    <string name="promo_kod">Промо код</string>
    <string name="sana">Сана</string>
    <string name="saqlash">Сақлаш</string>
    <string name="malumotlar_saqlandi">Маълумотларингиз сақланди</string>
    <string name="ma_lumotlarni_yangilash">Маълумотларни янгилаш</string>
    <string name="versiya">Версия</string>
    <string name="orqaga">Орқага</string>
    <string name="agent_kodi">Агент коди</string>
    <string name="tadiqlash_kodi">Тасдиқлаш коди</string>
    <string name="siz_rostdan_tizimdan_chiqmoqchimisiz">Сиз ростдан ҳам ушбу профилдан чиқмоқчимисиз?</string>
    <string name="tizimdan_chiqish">Тизимдан чиқиш</string>
    <string name="agent_kodini_toliq_kiriting">Агент кодини тўлиқ киритинг</string>
    <string name="tasdiqlash_kodini_toliq_kiriting">Тасдиқлаш кодини тўлиқ киритинг</string>
    <string name="aksiya_shartlari">Аксия шартлари</string>
    <string name="siz_kodni_5_marta">Сиз кетма-кет 5 марта промо кодни хато киритдингиз, қуйидаги вақтдан кейин қайта уриниб кўринг</string>
    <string name="promo_kodlar_lotin_harflar_va_raqamlardan_iborat">Промо кодлар лотин ҳарфлари ва рақамлардан иборат</string>
</resources>