<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/asosiy"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item
        android:id="@+id/productFragment"
        android:title="@string/mahsulotlar"
        android:icon="@drawable/ic_baseline_shopping_bag_24"/>

    <item
        android:enabled="false"
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/giftFragment"
        android:title="@string/sovrinlar"
        android:icon="@drawable/prize"/>

    <item
        android:id="@+id/cabinetFragment"
        android:title="@string/kabinet"
        android:icon="@drawable/ic_baseline_person_24"/>


</menu>