<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/blue_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/custom_toolbar"/>


    <ScrollView
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingHorizontal="24dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginVertical="30dp"
                android:src="@drawable/full_logo_white"/>

            <TextView
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:id="@+id/register_phone_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_et_bg"
                android:text="@string/telefon_raqami"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/ism"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/familiya"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />


            <TextView
                android:drawableTint="@color/white"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:id="@+id/register_region_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_et_bg"
                android:text="@string/viloyatni_tanlang"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:drawableTint="@color/white"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:id="@+id/register_district_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_et_bg"
                android:text="@string/tuman_tanlang"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:drawableTint="@color/white"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:id="@+id/register_quarter_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_et_bg"
                android:text="@string/mahalla_tanlang"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/register_street_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/login_et_bg"
                android:hint="@string/ko_cha"
                android:inputType="textCapSentences"
                android:maxLines="2"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <TextView
                android:drawableTint="@color/white"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:id="@+id/register_birthday_tv"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_et_bg"
                android:text="@string/tug_ilgan_sana"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shartlarga_roziman"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:id="@+id/register_agreement"/>

            <com.google.android.material.button.MaterialButton
                android:enabled="false"
                android:id="@+id/register_btn_register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/button_color"
                android:text="@string/ro_yxatdan_o_tish"
                app:cornerRadius="24dp"
                android:layout_marginTop="16dp"
                app:backgroundTint="@color/colorAccent"/>





        </LinearLayout>
    </ScrollView>



</LinearLayout>