<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/promocode_history_code_tv"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            android:text="@string/promo_kod"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_marginRight="6dp"
            android:text="@string/bal"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/sana"
            android:id="@+id/adapter_promocode_date"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/white"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/promocode_history_recyclerview"/>
</LinearLayout>