<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_bg">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:src="@drawable/full_logo_white"
        app:layout_constraintBottom_toTopOf="@+id/lin1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/login_timer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="1:55"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lin1" />

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/login_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="Description"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_timer_tv" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/login_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_et_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toTopOf="@+id/login_code_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.2"
                android:text="+998"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="12dp"
                android:background="@color/white" />

            <EditText

                android:id="@+id/login_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="numberDecimal"
                android:letterSpacing="0.2"
                android:maxLength="9"
                android:minEms="9"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/login_agent_code_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_et_bg"
            android:gravity="center"
            android:hint="@string/agent_kodi"
            android:inputType="numberDecimal"
            android:letterSpacing="0.2"
            android:maxLength="6"
            android:minEms="6"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/login_code_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_et_bg"
            android:gravity="center"
            android:hint="@string/tadiqlash_kodi"
            android:inputType="numberDecimal"
            android:letterSpacing="0.2"
            android:maxLength="6"
            android:minEms="6"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginRight="4dp"
                android:id="@+id/login_change_phone_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/raqamni_o_zgartirish"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/login_re_request_code_et"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_code_et" />
            <TextView
                android:gravity="end"
                android:layout_marginLeft="4dp"
                android:id="@+id/login_re_request_code_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/kod_kelmadi"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/login_change_phone_et"
                app:layout_constraintTop_toBottomOf="@+id/login_code_et" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:text="@string/yuborish"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_code_et" />

        <TextView
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/login_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>